# DiffLoupe

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CPP_GUIDE.md  GEMINI.md  Info.plist.in  README.md  comparator.py  main.py  ui_main.py
.kamui/: model-versions-cache.json  system-graph-state.json
Python/: CLAUDE.md  GEMINI.md  modern_theme.qss  requirements.txt  run.sh  ui_main.py
SwiftUI/: .gitignore  LICENSE  Package.swift  README.md  RELEASE_NOTES.md  SPEC.md  WORK_LOG.md
SwiftUI/DiffLoupe/: AppIcon.icns  DiffLoupeApp.swift  Info.plist
SwiftUI/DiffLoupe.xcodeproj/: project.pbxproj
SwiftUI/DiffLoupe.xcodeproj/xcshareddata/xcschemes/: DiffLoupe.xcscheme
SwiftUI/DiffLoupe/Engine/: FolderComparator.swift  ImageDiffEngine.swift  LineDiff.swift  TextFileLoader.swift
SwiftUI/DiffLoupe/Models/: DiffModels.swift
SwiftUI/DiffLoupe/UI/: AppModel.swift  ContentView.swift  DiffDetailView.swift  DiffTreeView.swift  ImageComparisonView.swift  SettingsView.swift  WindowFrameSaver.swift
SwiftUI/DiffLoupeTests/: ComparatorTests.swift  ImageDiffEngineTests.swift  LineDiffTests.swift
SwiftUI/Scripts/: make_app_icon.sh  make_demo_fixtures.sh  make_release.sh  make_stress_fixtures.sh
SwiftUI/Sources/: ContentView.swift  DiffLoupeSwiftUIApp.swift
SwiftUI/TestFixtures/left/: .hidden.txt  only_left.txt
SwiftUI/TestFixtures/left/sub/: nested_changed.txt
SwiftUI/TestFixtures/left/sub/deep/: only_left_deep.txt
SwiftUI/TestFixtures/right/: .hidden.txt  changed_same_size.txt  changed_size.txt  only_right.txt
SwiftUI/TestFixtures/right/sub/: nested_changed.txt
SwiftUI/TestFixtures/right/sub/deep2/: only_right_deep.txt
forms/: mainwindow.ui
legacy/: README.md  SAGYOU.md  STRUCTURE.md  test_file_b.txt
legacy/Python/: CLAUDE.md  WORK_LOG.md  comparator.py  main.py
legacy/cpp/: README.md
legacy/cpp/install/DiffLoupe.app/Contents/MacOS/: DiffLoupe
legacy/cpp/resources/: resources.qrc
legacy/cpp/resources/translations/: DiffLoupe_en_US.ts
legacy/cpp/src/: mainwindow.cpp
legacy/cpp/src/core/: comparator.cpp  fileinfo.cpp  fileinfo.h
legacy/cpp/src/ui/: diffviewer.cpp  hexviewer.h
legacy/cpp/src/workers/: compareworker.cpp  compareworker.h  fileloadworker.h
resources/: resources.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: comparator.cpp  comparator.h  diff_match_patch.h  diffresult.cpp  diffresult.h  fileinfo.cpp  fileinfo.h
src/ui/: diffviewer.cpp  diffviewer.h  hexviewer.cpp  hexviewer.h  imageviewer.cpp  imageviewer.h
src/workers/: compareworker.cpp  compareworker.h  fileloadworker.cpp  fileloadworker.h
